--- a/index.less
+++ b/index.less
@@ -7,3 +7,4 @@
 @import './styles/languages/html';
 @import './styles/languages/js';
 @import './styles/languages/php';
+@import './styles/languages/diff';
