--- a/styles/languages/php.less
+++ b/styles/languages/php.less
@@ -1,14 +1,19 @@
 @import (reference) "../language";
 
 .php {
-	&.support.function.construct,
-	&.meta.function-call {
+	.support.function.construct,
+	.meta.function-call {
 		._function-call;
 	}
 
-	&.punctuation.definition.variable,
-	&.variable.other {
-		._variable;
+	.punctuation.definition.variable,
+	.variable.other {
+		color: @fore;
+	}
+
+	.entity.type.namespace,
+	.support.other.namespace {
+		._class;
 	}
 
 }
