--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -25,21 +25,21 @@
 @syntax-gutter-background-color-selected : @gutter-back-selected;
 
 // For git diff info. i.e. in the gutter
-@syntax-color-renamed                    : @blue;
+@syntax-color-renamed                    : @string;
 @syntax-color-added                      : @grass;
-@syntax-color-modified                   : @orange;
+@syntax-color-modified                   : @yellow;
 @syntax-color-removed                    : @red;
 
 // For language entity colors
 @syntax-color-property                   : @syntax-text-color;
-@syntax-color-variable                   : @red;
-@syntax-color-constant                   : @orange;
-@syntax-color-value                      : @grass;
-@syntax-color-function                   : @blue;
-@syntax-color-method                     : @blue;
-@syntax-color-class                      : @yellow;
-@syntax-color-keyword                    : @purple;
-@syntax-color-tag                        : @red;
-@syntax-color-attribute                  : @orange;
-@syntax-color-import                     : @purple;
-@syntax-color-snippet                    : @grass;
+@syntax-color-variable                   : @variable;
+@syntax-color-constant                   : @constant;
+@syntax-color-value                      : @string;
+@syntax-color-function                   : @function;
+@syntax-color-method                     : @function;
+@syntax-color-class                      : @class;
+@syntax-color-keyword                    : @keyword;
+@syntax-color-tag                        : @function;
+@syntax-color-attribute                  : @variable;
+@syntax-color-import                     : @keyword;
+@syntax-color-snippet                    : @keyword;
