--- a/styles/languages/css.less
+++ b/styles/languages/css.less
@@ -7,7 +7,8 @@
 			._delimiter;
 		}
 
-		&.separator.key-value {
+		&.separator.key-value,
+		&.definition.entity {
 			._operator;
 		}
 		// Brace
@@ -19,6 +20,12 @@
 	}
 
 	.entity.attribute-name {
+		color: @fore;
+
+		&.pseudo-class {
+			._entity;
+		}
+		
 		&.class, &.parent-selector, &.id {
 			& > .punctuation.definition.entity {
 				._support-type;
@@ -26,8 +33,9 @@
 		}
 	}
 
+
 	.support.type.property-name {
-		._variable;
+		._function;
 	}
 }
 
