--- a/styles/languages/css.less
+++ b/styles/languages/css.less
@@ -25,7 +25,7 @@
 		&.pseudo-class {
 			._entity;
 		}
-		
+
 		&.class, &.parent-selector, &.id {
 			& > .punctuation.definition.entity {
 				._support-type;
@@ -36,6 +36,10 @@
 
 	.support.type.property-name {
 		._function;
+	}
+
+	.support.constant {
+		._constant;
 	}
 }
 
