--- a/index.less
+++ b/index.less
@@ -8,3 +8,4 @@
 @import './styles/languages/js';
 @import './styles/languages/php';
 @import './styles/languages/diff';
+@import './styles/languages/md';
