--- a/styles/languages/md.less
+++ b/styles/languages/md.less
@@ -1,7 +1,29 @@
-.gfm, .md {
+@import (reference) '../language';
+
+.source.gfm, .source.md {
 	.markup {
-		.heading {
-			.marker { ._punctuation; }
+		&.heading {
+			font-weight : 600;
+			line-height : 0em;
+
+			&.heading-1 { font-size: 1.24em; }
+			&.heading-2 { font-size: 1.16em; }
+			&.heading-3 { font-size: 1.08em; }
+
+			._entity;
+
+			&.marker, &.space { ._punctuation }
+		}
+
+		&.code {
+			color            : mix(@fore, @shade);
+			background-color : darken(@back, 5%) !important;
+			.support { ._punctuation; }
 		}
 	}
+
+	.variable.list {
+		._keyword;
+	}
+
 }
