Fix template strings, change key-value

--- a/styles/languages/js.less
+++ b/styles/languages/js.less
@@ -5,4 +5,15 @@
 		._brace;
 	}
 
+	.keyword.control.module {
+		._storage;
+	}
+
+	.string.quasi {
+		.entity.quasi {
+			color: @fore;
+		}
+	}
+
+
 }
