Tidy up, fix column highlight, readme

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,6 +1,6 @@
 // Base colors
 @fore : #dfdfdf;
-@back : #1d1b1a;
+@back : #1c1b1a;
 
 
 // Spectrum
@@ -48,12 +48,12 @@
 @selection       : fade(lighten(@back, 50%), 15%);
 @selection-flash : red;
 
-@guide-wrap         : fadeout(@fore, 20%);
+@guide-wrap         : fadeout(@fore, 94%);
 @guide-indent       : fadeout(@fore, 20%);
-@whitespace         : fadeout(@fore, 92.5%);
-@whitespace-leading : fadeout(@whitespace, 3%);
+@whitespace         : fadeout(@fore, 90%);
+@whitespace-leading : fadeout(@whitespace, 5%);
 
-@gutter-fore          : fadeout(@fore, 50%);
-@gutter-fore-selected : fadeout(@fore, 75%);
+@gutter-fore          : fadeout(@fore, 42%);
+@gutter-fore-selected : fadeout(@fore, 25%);
 @gutter-back          : darken(@back, 2%);
 @gutter-back-selected : darken(@back, 5%);
