--- a/styles/language.less
+++ b/styles/language.less
@@ -39,11 +39,16 @@
 ._brace, ._bracket {
     color       : @brace;
     font-weight : bold;
+    
+    /* // Brace padding
+
     padding     : 0 0.075em;
 
     .leading-whitespace:last-child {
-        margin-left: -0.075em;
+        //margin-left: -0.075em;
     }
+
+    */
 }
 
 ._brace-curly {
