--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -42,4 +42,4 @@
 @syntax-color-tag                        : @function;
 @syntax-color-attribute                  : @variable;
 @syntax-color-import                     : @keyword;
-@syntax-color-snippet                    : @keyword;
+@syntax-color-snippet                    : @brace;
