--- a/styles/colors.less
+++ b/styles/colors.less
@@ -44,9 +44,10 @@
 @constant         : @variable;
 @class            : @grass;
 
-@caret           : #fff;
-@selection       : fade(lighten(@back, 50%), 15%);
-@selection-flash : red;
+@caret            : #fff;
+@selection        : fadeout(@lime, 85%);
+@selection-border : fadeout(@lime, 40%);
+@selection-flash  : @lime;
 
 @guide-wrap         : fadeout(@fore, 94%);
 @guide-indent       : fadeout(@fore, 20%);
