consolidate class & constant colors

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -41,7 +41,7 @@
 @support-function : @lime;
 @storage          : @shade;
 @entity           : @yellow;
-@constant         : @variable;
+@constant         : @grass;
 @class            : @grass;
 
 @caret            : #fff;
