add xml, add linting coloring

--- a/index.less
+++ b/index.less
@@ -4,7 +4,7 @@
 @import './styles/editor';
 @import './styles/language';
 @import './styles/languages/css';
-@import './styles/languages/html';
+@import './styles/languages/xml';
 @import './styles/languages/js';
 @import './styles/languages/php';
 @import './styles/languages/diff';
