--- a/index.less
+++ b/index.less
@@ -5,7 +5,9 @@
 @import './styles/language';
 @import './styles/languages/css';
 @import './styles/languages/xml';
+@import './styles/languages/yml';
 @import './styles/languages/js';
 @import './styles/languages/php';
 @import './styles/languages/diff';
 @import './styles/languages/md';
+ 
