remove deprecation warnings

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -6,8 +6,8 @@
 // Spectrum
 @red     : #e79d8d;
 @orange  : #edbd7d;
-@yellow  : #f2de8d;
-@grass   : #c4ec9d;
+@yellow  : #f6e504;
+@grass   : #c9e78c;
 @lime    : #9fe080;
 @cyan    : #a1dbe3;
 @blue    : #96b3f2;
@@ -21,16 +21,16 @@
 // Elements / Aliases
 @punctuation      : @shade-1;
 @operator         : @red;
-@keyword          : @red;
+@keyword          : @cyan;
 @keyword-control  : @red;
 
 @terminator       : @shade-2;
 @delimiter        : @shade-1;
 @brace            : @shade-2;
-@string           : @cyan;
+@string           : @grass;
 @regexp           : @blue;
 @quote            : @punctuation;
-@comment          : @purple;
+@comment          : @shade;
 @comment-storage  : @storage;
 
 @function         : @orange;
@@ -41,7 +41,7 @@
 @support-function : @lime;
 @storage          : @shade;
 @entity           : @yellow;
-@constant         : @grass;
+@constant         : @red;
 @class            : @grass;
 
 @caret            : #fff;
