--- a/styles/languages/php.less
+++ b/styles/languages/php.less
@@ -1,18 +1,18 @@
 @import (reference) "../language";
 
-.php {
-	.support.function.construct,
-	.meta.function-call {
+.syntax--php {
+	.syntax--support.syntax--function.syntax--construct,
+	.syntax--meta.syntax--function-call {
 		._function-call;
 	}
 
-	.punctuation.definition.variable,
-	.variable.other {
+	.syntax--punctuation.syntax--definition.syntax--variable,
+	.syntax--variable.syntax--other {
 		color: @fore;
 	}
 
-	.entity.type.namespace,
-	.support.other.namespace {
+	.syntax--entity.syntax--type.syntax--namespace,
+	.syntax--support.syntax--other.syntax--namespace {
 		._class;
 	}
 
