--- a/styles/languages/xml.less
+++ b/styles/languages/xml.less
@@ -1,10 +1,10 @@
 @import (reference) "../language";
 
-.html, .xml, .jsx {
-	.entity.name.tag {
+.syntax--html, .syntax--xml, .syntax--jsx {
+	.syntax--entity.syntax--name.syntax--tag {
 		color: @function;
 
-		&.close {
+		&.syntax--close {
 			color: @punctuation;
 		}
 	}
@@ -12,8 +12,8 @@
 
 }
 
-.jsx {
-	.entity.other.attribute-name {
+.syntax--jsx {
+	.syntax--entity.syntax--other.syntax--attribute-name {
 		font-style: normal !important;
 	}
 }
