--- a/styles/languages/yml.less
+++ b/styles/languages/yml.less
@@ -1,11 +1,11 @@
 @import (reference) "../language";
 
-.yaml {
-	.entity.name.tag {
+.syntax--yaml {
+	.syntax--entity.syntax--name.syntax--tag {
 		color: @function;
 	}
 
-	.punctuation.entry {
+	.syntax--punctuation.syntax--entry {
 		._operator;
 	}
 }
