--- a/styles/languages/md.less
+++ b/styles/languages/md.less
@@ -1,28 +1,28 @@
 @import (reference) '../language';
 
-.source.gfm, .source.md {
-	.markup {
-		&.heading {
+.syntax--source.syntax--gfm, .syntax--source.syntax--md {
+	.syntax--markup {
+		&.syntax--heading {
 			font-weight : 600;
 			line-height : 0em;
 
-			&.heading-1 { font-size: 1.24em; }
-			&.heading-2 { font-size: 1.16em; }
-			&.heading-3 { font-size: 1.08em; }
+			&.syntax--heading-1 { font-size: 1.24em; }
+			&.syntax--heading-2 { font-size: 1.16em; }
+			&.syntax--heading-3 { font-size: 1.08em; }
 
 			._entity;
 
-			&.marker, &.space { ._punctuation }
+			&.syntax--marker, &.syntax--space { ._punctuation }
 		}
 
-		&.code {
+		&.syntax--code {
 			color            : mix(@fore, @shade);
 			background-color : darken(@back, 5%) !important;
-			.support { ._punctuation; }
+			.syntax--support { ._punctuation; }
 		}
 	}
 
-	.variable.list {
+	.syntax--variable.syntax--list {
 		._keyword;
 	}
 
