--- a/styles/editor.less
+++ b/styles/editor.less
@@ -1,18 +1,20 @@
-atom-text-editor.editor {
+
+atom-text-editor::shadow  {
     .linter-highlight {
-        &.syntax--error .region {
+        &.error .region {
             background: fade(red, 8.5%);
             border-color: fade(red, 40%);
         }
 
-        &.syntax--warning .region {
+        &.warning .region {
             background: fade(white, 2.5%);
             border-color: fade(orange, 35%);
         }
     }
 }
 
-atom-text-editor {
+atom-text-editor, // <- remove when Shadow DOM can't be disabled
+:host {
     background-color: @syntax-background-color;
     color: @syntax-text-color;
 
