--- a/styles/languages/diff.less
+++ b/styles/languages/diff.less
@@ -1,18 +1,18 @@
-.syntax--source.syntax--diff {
+.source.diff {
 	color: darken(@fore, 20%);
 
-	.syntax--punctuation {
+	.punctuation {
 		color: @shade-2;
 
-		&.syntax--definition.syntax--from-file { color: @red; }
-		&.syntax--definition.syntax--to-file { color: @grass; }
+		&.definition.from-file { color: @red; }
+		&.definition.to-file { color: @grass; }
 	}
 
-	.syntax--range {
+	.range {
 		color: @string;
 	}
 
-	.syntax--index, .syntax--header {
+	.index, .header {
 		color: @fore;
 	}
 
