--- a/styles/languages/php.less
+++ b/styles/languages/php.less
@@ -1,18 +1,18 @@
 @import (reference) "../language";
 
-.syntax--php {
-	.syntax--support.syntax--function.syntax--construct,
-	.syntax--meta.syntax--function-call {
+.php {
+	.support.function.construct,
+	.meta.function-call {
 		._function-call;
 	}
 
-	.syntax--punctuation.syntax--definition.syntax--variable,
-	.syntax--variable.syntax--other {
+	.punctuation.definition.variable,
+	.variable.other {
 		color: @fore;
 	}
 
-	.syntax--entity.syntax--type.syntax--namespace,
-	.syntax--support.syntax--other.syntax--namespace {
+	.entity.type.namespace,
+	.support.other.namespace {
 		._class;
 	}
 
