--- a/styles/languages/xml.less
+++ b/styles/languages/xml.less
@@ -1,10 +1,10 @@
 @import (reference) "../language";
 
-.syntax--html, .syntax--xml, .syntax--jsx {
-	.syntax--entity.syntax--name.syntax--tag {
+.html, .xml, .jsx {
+	.entity.name.tag {
 		color: @function;
 
-		&.syntax--close {
+		&.close {
 			color: @punctuation;
 		}
 	}
@@ -12,8 +12,8 @@
 
 }
 
-.syntax--jsx {
-	.syntax--entity.syntax--other.syntax--attribute-name {
+.jsx {
+	.entity.other.attribute-name {
 		font-style: normal !important;
 	}
 }
